Replace skills/loading with English examples, fix terrain visibility, bilingual README
Made-with: Cursor

--- a/styles/_sections.scss
+++ b/styles/_sections.scss
@@ -749,7 +749,7 @@
   padding-bottom: 50px;
   background-image: url('/terrain.svg');
   background-size: cover;
-  background-position: center 300px;
+  background-position: center center;
   background-repeat: no-repeat;
   margin-bottom: 0px; // --- ADD: Negative margin to pull About section up ---
 }
